# eager

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: eager.rs  eager_macro_rules.rs  lazy.rs  lib.rs
tests/: all_tests.rs
tests/macros/: eager.rs  eager_macro_rules.rs  lazy.rs  mod.rs
